--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -5,7 +5,9 @@
 	color: $darkBlue;
 }
 
-body {
+html, body {
+    max-width: 100%;
+	overflow-x: hidden;
 	background-color: $darkBlue;
 	font-family: $fontFamily;
 }
@@ -14,3 +16,10 @@ a {
 	text-decoration: none;
 	cursor: pointer;
 }
+
+.flex {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
