--- a/scss/_watchlist.scss
+++ b/scss/_watchlist.scss
@@ -1,16 +1,34 @@
 .list-box {
-    margin: 2rem 0 2rem 3rem;
+    margin: 2rem 3rem;
     flex-direction: column;
+    min-height: 70vh;
+    gap: 2rem;
 
+    .showall {
+        height: 1rem;
+        width: 5rem;
+        border: 2px solid $blue;
+        padding: 0.5rem 1rem;
+        border-radius: 15px;
+        text-align: center;
+        color: $ivory;
+        align-self: flex-end;
+
+        &:hover { 
+            background-color: $blue; 
+            transition: all 0.15s ease-in-out;
+        }
+    }
+   
     &_half {
         flex-direction: column;
         align-items: flex-start;
         gap: 1rem;
         width: 100%;
-        margin-bottom: -3rem;
+        overflow-x: scroll;
 
-        @include breakpoint-down(medium) {
-            margin-bottom: 3rem;
+        &::-webkit-scrollbar {
+            display: none;
         }
 
         p { 
@@ -20,24 +38,25 @@
         }
 
         .movie {
-            flex-direction: column;
-            height: 50%;
-            width: 100%;
             display: grid;
             grid-template-rows: 75% 25%;
             border-radius: 1rem;
+            width: 15rem;
+            height: 25rem;
+            margin-right: 2rem;
 
             &_poster {
+                position: relative;
                 border-top-left-radius: 1.5rem;
                 border-top-right-radius: 1.5rem;
                 border: 1px solid $ivory;
                 border-color: rgba(242, 241, 232, 0.7);
             }
-
+        
             img {
-                position: relative;
-                width: 100%;
+                position: absolute;
                 height: 100%;
+                width: 100%;
                 border-top-left-radius: 1.5rem;
                 border-top-right-radius: 1.5rem;
             }
@@ -59,29 +78,6 @@
                 }
             }
         }
-
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(13, 20%);
-            grid-gap: 2rem;
-            width: 100%;
-            overflow-x: scroll;
-
-            &::-webkit-scrollbar {
-                display: none;
-            }
-        }
-
-        .mylist {
-            margin-bottom: 1rem;
-        }
-
-        .top5 {
-            grid-template-columns: repeat(5, 20%);
-        }
     }
 }
-
-
-
 
