homepage & Sign up Welcome page

--- a/components/home.htm
+++ b/components/home.htm
@@ -22,7 +22,102 @@
 		<a href=login.htm class='menu_button flex menu_login'>Log in</a>
 	</div>
 </div>
+<div class = 'movie-box flex'>
+	<div class="movie-box_half flex">
+		<p>The Most Watched Movie This Week</p>
+		<div class = "movie">
+			<div class = "movie_poster"></div>
+				<a href="#"><img src =http://www.impawards.com/2019/posters/avengers_endgame_ver3_xlg.jpg></a>
+			<div class = "movie_info">
+				<div class = "title">Avengers: End Game</div>
+				<div class = "rating">Rate ☆☆☆☆☆</div>
+			</div>
+		</div>
+	</div>
+	<div class="movie-box_half flex">
+		<p>The Newest Movie</p>
+		<div class = "movie">
+			<div class = "movie_poster"></div>
+			<a href="#"><img src = http://www.impawards.com/2019/posters/avengers_endgame_ver3_xlg.jpg></a>
+			<div class = "movie_info">
+				<div class = "title">Avengers: End Game</div>
+				<div class = "rating">Rate ☆☆☆☆☆</div>
+			</div>
+		</div>
+	</div>
+</div>
 
+<div class="list-box flex">
+	<div class='list-box_half flex'>
+		<p>Click potato to add into your list</p>
+		<div class='mylist flex'>
+			<div class=movie>
+				<div class=movie_poster>
+				<a href=#><img src=https://www.orlandosentinel.com/resizer/vzlAoTH2BUqFjnq2veIap7Lj5Cc=/1200x1777/top/arc-anglerfish-arc2-prod-tronc.s3.amazonaws.com/public/YG5DCUXYCVEHNJ5Y4DHCTKT6MM.jpg></a>
+				<a href=#><img src="../images/potato.png" class="like"></a>
+			</div>
+				<div class='movie_info flex'>
+					<div class=title>Avengers: End Game</div><br>
+					<div class=rating>Rate ☆☆☆☆☆ </div>
+				</div>
+			</div>
+			<div class=movie>
+				<div class=movie_poster>
+					<a href=#><img src="../images/potato.png" class="like"></a>
+				</div>
+				<div class='movie_info flex'>Movie Info</div>
+			</div>
+			<div class=movie>
+				<div class=movie_poster>
+					<a href=#><img src="../images/potato.png" class="like"></a>
+				</div>
+				<div class='movie_info flex'>Movie Info</div>
+			</div>
+			<div class=movie>
+				<div class=movie_poster>
+					<a href=#><img src="../images/potato.png" class="like"></a>
+				</div>
+				<div class='movie_info flex'>Movie Info</div>
+			</div>
+			<div class=movie>
+				<div class=movie_poster>
+					<a href=#><img src="../images/potato.png" class="like"></a>
+				</div>
+				<div class='movie_info flex'>Movie Info</div>
+			</div>
+			<div class=movie>
+				<div class=movie_poster>
+					<a href=#><img src="../images/potato.png" class="like"></a>
+				</div>
+				<div class='movie_info flex'>Movie Info</div>
+			</div>
+			<div class=movie>
+				<div class=movie_poster>
+					<a href=#><img src="../images/potato.png" class="like"></a>
+				</div>
+				<div class='movie_info flex'>Movie Info</div>
+			</div>
+			<div class=movie>
+				<div class=movie_poster>
+					<a href=#><img src="../images/potato.png" class="like"></a>
+				</div>
+				<div class='movie_info flex'>Movie Info</div>
+			</div>
+			<div class=movie>
+				<div class=movie_poster>
+					<a href=#><img src="../images/potato.png" class="like"></a>
+				</div>
+				<div class='movie_info flex'>Movie Info</div>
+			</div>
+			<div class=movie>
+				<div class=movie_poster>
+					<a href=#><img src="../images/potato.png" class="like"></a>
+				</div>
+				<div class='movie_info flex'>Movie Info</div>
+			</div>
+		</div>
+	</div>
+</div>
 <p>Copyright (c) 2022 Rotten Potatoes. All rights reserved.</p>
 
 <script src=../scripts/search.js></script>
