--- a/scss/_welcome.scss
+++ b/scss/_welcome.scss
@@ -1,63 +1,59 @@
-.welcometxt{
-    margin-top: 4rem;
-    flex-direction: column;
-    text-align: center;
-    .welcome{
+.welcome-wrap {
+
+    .welcometxt {
+        margin-top: 4rem;
+        flex-direction: column;
+        text-align: center;
+
+        .welcome {
             flex-direction: row;
             font-size: 8em;
             font-weight: bold;
             color : $ivory;
         }
-    img{
+
+        img{
             padding-top: 1rem;
             padding-left: 1rem;
             width:8rem;
             height:8rem;
-    }
-    .greet{
-        color : $ivory;
-        font-size:2em;
-    }
-
-}
-.homebutton{
-    margin-top: 3rem;
-    display: flex;
-    justify-content: center;
-    gap: 3rem;
-    .hollowred {
-        height: 1.2rem;
-        width: 6rem;
-        border: 2px solid $red;
-        background: $red;
-        padding: 0.5rem 1rem;
-        border-radius: 15px;
-        text-align: center;
-        color: $ivory;
-        align-self: flex-end;
-    
-        &:hover {
-            background-color: $ivory;
-            border: 2px solid $ivory;
-            color:black;
         }
-    }
-    .hollowblue{
-        height: 1.2rem;
-        width: 6rem;
-        border: 2px solid #0D698B;
-        background: #0D698B;
-        padding: 0.5rem 1rem;
-        border-radius: 15px;
-        text-align: center;
-        color: $ivory;
-        align-self: flex-end;
 
-        &:hover{
-            background-color: $ivory;
-            border: 2px solid $ivory;
-            color:black;
+        .greet {
+            color : $ivory;
+            font-size:2em;
+        }
+
+    }
+
+    .homebutton{
+        margin-top: 3rem;
+        display: flex;
+        justify-content: center;
+        gap: 3rem;
+
+        .hollow {
+            padding: 1rem 3rem;
+            border-radius: 1.5rem;
+            text-align: center;
+            color: $ivory;
+            font-weight: $bold;
+            font-size: 1rem;
             transition: all 0.15s ease-in-out;
+        
+            &:hover {
+                background-color: transparent;
+            }
+        }
+
+        .red {
+            border: 2px solid $red;
+            background: $red;
+        }
+
+        .blue {
+            border: 2px solid $blue;
+            background: $blue;
         }
     }
 }
