--- a/scss/_movie.scss
+++ b/scss/_movie.scss
@@ -37,7 +37,7 @@
                 line-height: 1.5rem;
                 font-size: 1rem;
                 text-align: justify;
-                background-color: rgba(212, 212, 212, 0.15);
+                border: 2px solid rgba(212, 212, 212, 0.15);
                 border-radius: 1.5rem;
                 padding: 3rem;
             }
