--- a/scss/_categories.scss
+++ b/scss/_categories.scss
@@ -1,6 +1,6 @@
-.categ-box {
-    margin: 2rem 3.4rem;
-    flex-direction: column;
+.list-box {
+    //margin: 2rem 3.4rem;
+    //flex-direction: column;
 
     .categ {
         width: 100%;
@@ -26,7 +26,7 @@
     &_half {
         flex-direction: column;
         align-items: flex-start;
-        gap: 2rem;
+        gap: 2.6rem;
         width: 100%;
         padding: 2rem 3rem;
 
