--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,4 +1,5 @@
 .wrapper {
+    margin-bottom: 3rem;
 
     .top-title {
         font-size: 2.4rem;
@@ -10,7 +11,7 @@
     }
 
     .movie-box {
-        margin: 1rem 5rem;
+        margin: 0 5rem;
         flex-direction: row;
         gap: 5rem;
 
@@ -77,11 +78,15 @@
         }
     }
 
-    .like {
-        width: 40%;
-        height: 60%;
-        top: -20rem;
-        position: relative;
-        display: none;
+    .home-list-label {
+        padding-bottom: 1rem;
     }
+}
+
+.like {
+    width: 3.2rem;
+    height: 3.2rem;
+    //top: -20rem;
+   // position: relative;
+    //display: none;
 }
